--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/
 *.iml
 *.iws
+*.iml
+*.ipr
 
 # Mac
 .DS_Store
@@ -16,12 +18,6 @@ target/
 
 # Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
